objects/Organization_Document__c.object
<CustomObject>
    <description>Documents uploaded by grant recipients for vetting (tax returns, IRS letters, state registrations, etc.)</description>
    <label>Organization Document</label>
    <nameField>
        <displayFormat>DOC-{000000}</displayFormat>
        <label>Document ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Organization Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    
    <!-- Relationship (Master-Detail: C-4 fix) -->
    <fields>
        <fullName>Grant_Recipient__c</fullName>
        <label>Grant Recipient</label>
        <referenceTo>Grant_Recipient__c</referenceTo>
        <relationshipLabel>Organization Documents</relationshipLabel>
        <relationshipName>Organization_Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <required>true</required>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    
    <!-- Document Information -->
    <fields>
        <fullName>Document_Name__c</fullName>
        <label>Document Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IRS Determination Letter</fullName>
                    <label>IRS 501(c)(3) Determination Letter</label>
                </value>
                <value>
                    <fullName>State AP205</fullName>
                    <label>State AP205/Equivalent</label>
                </value>
                <value>
                    <fullName>Tax Return</fullName>
                    <label>Tax Return (Form 990)</label>
                </value>
                <value>
                    <fullName>Articles of Incorporation</fullName>
                </value>
                <value>
                    <fullName>Bylaws</fullName>
                </value>
                <value>
                    <fullName>Board Resolution</fullName>
                </value>
                <value>
                    <fullName>Annual Report</fullName>
                </value>
                <value>
                    <fullName>Financial Statement</fullName>
                </value>
                <value>
                    <fullName>Audit Report</fullName>
                </value>
                <value>
                    <fullName>Prior Project Documentation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Year__c</fullName>
        <label>Document Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>File_URL__c</fullName>
        <label>File URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ContentVersion_ID__c</fullName>
        <label>ContentVersion ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    
    <!-- Review Status -->
    <fields>
        <fullName>Review_Status__c</fullName>
        <label>Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Review</fullName>
                    <default>true</default>
                    <label>Pending Review</label>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Needs Resubmission</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Notes__c</fullName>
        <label>Review Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reviewed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Documents_Reviewed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <label>Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Upload_Date__c</fullName>
        <label>Upload Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
</CustomObject>